[package]
name = "Fnirsi"
version = "0.1.0"
authors = ["Yosef Deray <yosefderay770@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binread = "2.2.0"
lazy_static = "1.4.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
clap = { version = "3.0.14", features = ["derive"] }
thiserror = "1.0.30"